Fixing alignment of logo

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,7 @@ html {
     font-weight: 900;
     font-size: 2rem;
     line-height: 150%;
+    align-self:center;
 }
 
 /* ? Klasyczna Nawigacja */
@@ -401,6 +402,7 @@ html {
     
     .fa-atlas{
         line-height:190%;
+        align-self:stretch;
     }
     
     .form-button{
